# SSE-Cloud-Service

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: deploy.yml  sync-images.yml
coursebot/: .dockerignore  Dockerfile  Dockerfile.ingestor  Dockerfile.retriever  README.md  pyproject.toml
coursebot/apps/gateway/: llm_adapter.py  main.py  moderation.py  rag.py  security.py
coursebot/apps/gateway/observability/: metrics.py
coursebot/scripts/: demo.sh  manage_rag.py  test_rag.py
coursebot/services/ingestor/: chunking.py  main.py  pdf_utils.py
coursebot/services/llm_adapter/: provider.py
coursebot/services/retriever/: main.py
coursebot/shared/: chroma_utils.py  chunking.py
docs/retrospectives/: 2026-04-29-K8s_Migration.md  prompt.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
infra/compose/: docker-compose.yml
k8s/base/: configmap-app.yaml  configmap-ollama-scripts.yaml  deployment-coursebot.yaml  deployment-gateway.yaml  deployment-ingestor.yaml  deployment-retriever.yaml  grafana.yaml  job-ollama-init.yaml  kustomization.yaml  prometheus.yaml  services.yaml  statefulset-chroma.yaml  statefulset-ollama-chat.yaml  statefulset-ollama-embed.yaml  statefulset-ollama.yaml  statefulset-redis.yaml
legacy/: docker-compose.yml
legacy/nginx/: default.conf  prod.conf
nginx/: default.conf  prod.conf
nginx/html/: console.html  dev-guide.html  index.html
scripts/: dev-deploy.ps1  manual-build.ps1
(+26 files in other folders)
