[project]
name = "coursebot"
version = "0.1.0"
description = "FastAPI CourseBot with OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages", "services"]
