[project]
name = "coursebot"
version = "0.1.0"
description = "FastAPI CourseBot with OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages", "services", "shared"]
